<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stats_nav_graph"
    app:startDestination="@id/AllFragment">

    <fragment
        android:id="@+id/AllFragment"
        android:name="rpt.tool.mementobibere.ui.statistics.all.AllStatsFragment"
        android:label="@string/all_stats_fragment_label"
        tools:layout="@layout/all_stats_fragment">
        <action
            android:id="@+id/action_allstatsFragment_to_to_intookFragment"
            app:destination="@id/intookFragment" />
        <action
            android:id="@+id/action_allstatsFragment_to_goalFragment"
            app:destination="@id/goalFragment" />
        <action
            android:id="@+id/action_allstatsFragment_to_drinkFragment"
            app:destination="@id/drinkFragment" />
    </fragment>
    <fragment
        android:id="@+id/intookFragment"
        android:name="rpt.tool.mementobibere.ui.statistics.intook.IntookCounterFragment"
        android:label="@string/intook_stats_fragment_label"
        tools:layout="@layout/intook_counter_stats_fragment">
        <action
            android:id="@+id/action_intookFragment_to_to_allstatsFragment"
            app:destination="@id/AllFragment" />
        <action
            android:id="@+id/action_intookFragment_to_goalFragment"
            app:destination="@id/goalFragment" />
        <action
            android:id="@+id/action_intookFragment_to_drinkFragment"
            app:destination="@id/drinkFragment" />
    </fragment>
    <fragment
        android:id="@+id/goalFragment"
        android:name="rpt.tool.mementobibere.ui.statistics.reachedGoal.ReachedGoalFragment"
        android:label="@string/reached_goal_stats_fragment_label"
        tools:layout="@layout/reached_goal_stats_fragment">
        <action
            android:id="@+id/action_goalFragment_to_to_intookFragment"
            app:destination="@id/intookFragment"/>
        <action
            android:id="@+id/action_goalFragment_to_allstatsFragment"
            app:destination="@id/AllFragment" />
        <action
            android:id="@+id/action_goalFragment_to_drinkFragment"
            app:destination="@id/drinkFragment" />
        <action
            android:id="@+id/action_goalFragment_to_itself"
            app:destination="@id/goalFragment" />
    </fragment>
    <fragment
        android:id="@+id/drinkFragment"
        android:name="rpt.tool.mementobibere.ui.drink.DrinkFragment"
        android:label="@string/drink_fragment_label"
        tools:layout="@layout/drink_fragment">
    </fragment>

</navigation>